--- a/persetujuan.tex
+++ b/persetujuan.tex
@@ -1,38 +1,45 @@
 %
 % Lembar persetujuan
+
 \doublespacing
 \chapter*{\uppercase{LEMBAR PERSETUJUAN}}
-\vspace{1cm}
-
-\renewcommand{\arraystretch}{1.5}
-\begin{table}[ht]
-\begin{adjustwidth}{-0.15cm}{}
-	\begin{tabularx}{\textwidth}{llX}
-		Nama & : & Imron Rosdiadna \\
-		NIM & : & 2010140419 \\
-		Program Studi & : & Teknik Informatika \\
-		Fakultas & : & Teknik \\
-		Jenjang Pendidikan & : & Strata 1 \\
-		Judul Skripsi & : & PERANCANGAN SISTEM INFORMASI KOPERASI SIMPAN PINJAM BERBASIS WEB
-	\end{tabularx}
-\end{adjustwidth}
-\end{table}
-
-\noindent Skripsi ini telah diperiksa dan disetujui. \\
-Pamulang, 01 Agustus 2014
-
-\vspace{3cm}
+\onehalfspacing
 \begin{center}
-\begin{minipage}{\linewidth}\centering
-\underline{Pembimbing 1, S.Kom, M, Kom} \\
-Pembimbing \\
-\vspace{1cm}
-Mengeetahui, \\
-\vspace{3cm}
-\underline{Kaprodi, S.Si, M.Si} \\
-KaProdi Teknik Informatika
-\end{minipage}
+	\large \bfseries \textit{AutomaticDeployment}  Aplikasi berbasis \textit{Microservice} Pada Platform Kubernetes Dengan Metode \textit{Pull Up Based} \\
+
+	\vspace{2.5cm}
+
+	\bfseries{Muhammad Zein Ihza Fahrozi\\
+		201810370311072}
+
+	\vspace{1cm}
+	\normalfont\normalsize Telah Direkomendasikan Untuk Diaujan Sebagai\\
+	Judul Tugas Akhir Di\\
+	Program Studi Informatika Universitas Muhammadiyah Malang
 \end{center}
+
+\vspace{5cm}
+
+
+
+\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
+
+\begin{center}
+	\normalfont\normalsize Malang, \today \\
+	Menyetujui,
+\end{center}
+
+% \renewcommand{\arraystretch}{1} % Default value: 1
+% \setlength{\tabcolsep}{10pt}
+\begin{table}[!ht]
+	\centering
+	\begin{tabular}{M{7cm}M{7cm}}
+
+		Dosen I                                                                                             & Dosen II                                                                                        \\
+		\rule{0pt}{4cm} \bfseries{\underline{Agus Eko Minarno, S.Kom., M.Kom.}} \newline NIP. 108.1410.0540 & \rule{0pt}{4cm} \bfseries{\underline{Ilyas Nuryasin S.Kom, M.Kom.}} \newline NIP. 108.1410.0561 \\
+	\end{tabular}
+\end{table}
 
 \newpage
 \onehalfspacing
