--- a/sampul.tex
+++ b/sampul.tex
@@ -1,25 +1,27 @@
 \begin{titlepage}
 \begin{center}
 	\onehalfspacing
-	\large \bfseries PERANCANGAN SISTEM INFORMASI KOPERASI SIMPAN PINJAM BERBASIS WEB \\
+	\large \bfseries \textit{AutomaticDeployment}  Aplikasi berbasis \textit{Microservice} Pada Platform Kubernetes Dengan Metode \textit{Pull Up Based} \\
 	\vspace{1cm}
-	 \large SKRIPSI \\
+	 \large Proposal Tugas Akhir \\
+	\vspace{0.5cm}
 	
+	{\small \normalfont Diajukan Untuk Memenuhi\\
+	Persyaratan Guna Meraih Gelar Sarjana\\
+	Informatika Universitas Muhammadiyah Malang}
 	\vspace{2cm}
 	
-	\includegraphics[width=6cm]{images/logo-unpam.png}
+	\includegraphics[width=6cm]{images/logo_umm.png}
 	
 	\vspace{1cm}
-	\large OLEH: \\
-	IMRON ROSDIANA \\
-	2010140419
+	Muhammad Zein Ihza Fahrozi \\
+	201810370311072 \\
 	
 	\vspace{3cm}
 	
-	\normalsize PROGRAM STUDI TEKNIK INFORMATIKA \\
-	\large FAKULTAS TEKNIK \\
-	UNIVERSITAS PAMULANG \\
-	2014
+	\normalsize PROGRAM STUDI TEKNIK INFORMATIKA FAKULTAS TEKNIK \\
+	UNIVERSITAS MUHAMMADIYAH MALANG \\
+	2021
 	
 
 	
