--- a/hype.indonesia.tex
+++ b/hype.indonesia.tex
@@ -14,20 +14,20 @@
 
 \hyphenation{
     % alphabhet A
-    a-na-li-sa a-tur 
-    a-pli-ka-si 
+    a-na-li-sa a-tur
+    a-pli-ka-si
     a-na-li-tik
     % alphabhet B
-    ba-ngun-an 
-    be-be-ra-pa 
+    ba-ngun-an
+    be-be-ra-pa
     ber-ge-rak
-    ber-ke-lan-jut-an 
+    ber-ke-lan-jut-an
     ber-pe-nga-ruh
-    bim-bing-an 
+    bim-bing-an
     % alphabhet C
     ca-ri
     % alphabhet D
-    di-sim-pan di-pim-pin de-ngan da-e-rah di-ba-ngun da-pat di-nya-ta-kan 
+    di-sim-pan di-pim-pin de-ngan da-e-rah di-ba-ngun da-pat di-nya-ta-kan
     di-sim-bol-kan di-pi-lih di-li-hat de-fi-ni-si
     di-rahmat-i
     di-identifi-kasi-kan
@@ -48,7 +48,7 @@
     % alphabhet K
     ke-rapat-an
     ke-hi-lang-an
-    ku-ning 
+    ku-ning
     kompu-tasi
     kua-li-tas ka-me-ra ke-mung-kin-an ke-se-pa-ham-an
     % alphabhet L
@@ -58,22 +58,23 @@
     me-neng-ah
     mem-perhitung-kan
     mem-ban-ding-kan
-    meng-a-tas-i me-mung-kin-kan me-nge-na-i me-ngi-rim-kan 
+    meng-a-tas-i me-mung-kin-kan me-nge-na-i me-ngi-rim-kan
     meng-u-bah meng-a-dap-ta-si me-nya-ta-kan mo-di-fi-ka-si
     meng-a-tur
+    micro-service
     % alphabhet N
     nya-ta non-eks-klu-sif
     nano-tekno-logi
     % alphabhet O
     % alphabhet P
     pa-ling
-	pe-nye-rap-an 
-	pe-ngon-trol
+    pe-nye-rap-an
+    pe-ngon-trol
     pe-mo-del-an
     pe-ran  pe-ran-an-nya
-    pem-ba-ngun-an pre-si-den pe-me-rin-tah prio-ri-tas peng-am-bil-an 
-    peng-ga-bung-an pe-nga-was-an pe-ngem-bang-an 
-    pe-nga-ruh pa-ra-lel-is-me per-hi-tung-an per-ma-sa-lah-an 
+    pem-ba-ngun-an pre-si-den pe-me-rin-tah prio-ri-tas peng-am-bil-an
+    peng-ga-bung-an pe-nga-was-an pe-ngem-bang-an
+    pe-nga-ruh pa-ra-lel-is-me per-hi-tung-an per-ma-sa-lah-an
     pen-ca-ri-an peng-struk-tur-an
     % alphabhet Q
     % alphabhet R
@@ -85,7 +86,7 @@
     % alphabhet T
     te-ngah
     ter-da-pat
-    ter-selesai-kanya 
+    ter-selesai-kanya
     % alphabhet U
     % alphabhet V
     % alphabhet W
