--- a/bab1.tex
+++ b/bab1.tex
@@ -3,76 +3,162 @@
 %-----------------------------------------------------------------------------%
 
 \vspace{4.5pt}
+\setlength{\parskip}{0.5em}
 
 \section{Latar Belakang} \label{sec:latar_belakang}
-\blindtext
+Sebuah perangkat lunak sebelum digunakan oleh pengguna secara luas perlu dilakukan proses deployment
+pada perangkat lunak tersebut. Deployment sebuah perangkat lunak dapat didefinisikan sebagai akusisi
+dan eksekusi sebuah perangkat lunak. Proses ini biasanya dilakukan oleh seorang software deployer atau dalam bahasa yang sering
+digunakan belakangan ini seorang SRE (site reliability engineer)\cite{Lyu2007}.
+Maka dari itu dapat dikatan deployment adalah aktivitas post-production sebuah perangkat lunak untuk digunakan oleh konsumen.
+Proses deployment sebuah perangkat lunak terdiri dari beberapa proses yang saling berhubungan seperti proses release sebuah perangkat lunak,
+instalasi perangkat lunak kedalam environment exectuion, dan aktivasi sebuah software\cite{Carzaniga1998}.
 
-\blindtext
-\section{Identifikasi Masalah}
-Berdasarkan latar belakang di atas dapat diidentifikasi masalah-masalah sebagai berikut:
-\begin{enumerate}[nolistsep,leftmargin=0.5cm]
-\item Masalah 1.
-\item Masalah 2.
-\item Masalah 3.
-\end{enumerate}
+Untuk mendeploy sebuah sistem perangkat lunak juga ada beberapa yang harus diperhatikan antara lain sub-komponen yang dibutuhkan atau package external,
+resource (hardware). Untuk melakukan deploymen sub-komponen ini dibutuhkannya sebuah konfigurasi yang mendeskripsikan versi sub-komponen yang digunakan oleh perangkat lunak.
+Dengan bahasa modern sekarang konfigurasi sub-komponen yang digunakan oleh main aplikasi biasanya sudah automatis terbuat contohnya antara lain adalah;
+go modules\cite{go_mod} dalam bahasa Golang, requirement file\cite{requirementPython} dalam bahasa Python, atau file RubySpec\cite{rubySpec} pada bahasa Ruby.
+\par
+Terdapat beberapa karakteristik yang mendasar pada deployment sebuah perangkat lunak yang ditulis oleh Alan Dearle yaitu\cite{Dearle2007};
+\textbf{\textit{Release}} berupa jembatan antara proses deployment dengan proses development. yang meliputi semua operasi
+yang diperlukan untuk mempersiapkan sebuah sistem  untuk di-transfer ke konsumen.
+Aktivitas release ini juga menentukan resource yang dibutuhkan oleh sebuah sistem perangkat lunak untuk dapat beroperasi pada environment nya.
+Setelah itu dilakukan packaging pada sistem perangkat lunak.
+Package tersebut harus mengandung komponen yang dibutuhkan oleh sistem, deskripsi sistem, dependencies pada komponen eksternal, prosedur deployment,
+dan semua informasi yang relevan dari sistem tersebut pada environment yang akan dijalankan.
+\textbf{\textit{Installation}} diperlukan untuk persiapan melakukan activation. \textbf{\textit{Activation}} adalah proses ekseksui sebuah perangkat lunak pada waktu tertentu, biasa menggunakan grafik antar muka ataupun proses daemon.
+Updating adalah proses untuk mengganti bagian dari perangkat lunak yang terinstal dengan versi yang lebih baru.
+Selanjutnya yaitu \textbf{\textit{Undeployment}} yaitu proses menghapus software yang terinstall dalam sebuah mesin ini dapat disebut dengan \textit{deinstallation}.
+\par
+Menurut Mockus dkk\cite{Mockus2005} kualitas deployment sebuah perangkat lunak masuk kedalam faktor utama dalam persepsi konsumer dalam hal kualitas sebuah perangkat lunak.
+Jansen dan Brinkkemper\cite{Jansen2006} juga mengatakan bahwa kelancaran sebuah deployment perangkat lunak adalah hal esensial untuk meningkatkan produk perangkat lunak sebuah perusahaan/organisasi.
+Tetapi terdapat beberapa tantangan yang dihadapi pada saat melakukan aktivitas deploymet.
+Menurut Antonio Carzaniga\cite{Carzaniga1998} terdapat beberapa tantangan yang sering dihadapi pada saat melakukan deployment yaitu;
+\textbf{Mengganti} atau melakukan update sebuah sistem terhadap komponen yang sudah berjalan,
+\textbf{Dependencies} komponen antar satu sama lain, dan
+\textbf{Koordinasi} ketika melakukan update apakah akan mengganggu proses bisnis yang sedang berjalan atau tidak, dan juga
+\textbf{Mengatur} platform yang heterogen misalnya terhadap spesifik sistem operasi yang digunakan.
+\par
+Seiring berjalannya waktu, sebuah aplikasi cenderung menjadi semakin  kompleks\cite{Tania2014, Newman2015}.
+Dengan team pengembang dan aplikasi yang selalu bertumbuh  dari sisi kompleksitas dan \textit{maintainability} biasanya
+menyebabkan model  pengembangan aplikasi menjadi susah untuk dikembangkan atau dapat dikatakan  terdapat \textit{bottleneck}
+sehingga aplikasi menjadi tidak efisien\cite{Yale2016}. Dengan berkembangnya kompleksitas sebuah aplikasi diperlukan
+sebuah arsitektur yang  bisa menyelesaikan hal itu, salah satu caranya yaitu menggunakan arsitektur \textit{microservice}\cite{Tania2014}.
+Dengan \textit{microservice} aplikasi dibagi menjadi bagian-bagian kecil (unit) yang terpisah satu dengan lainnya\cite{Tania2014}.
+Masing-masing bagian aplikasi ini  dapat dijalankan dan dikembangkan secara independent (dari sisi developer)\cite{Xiao2017}.
+\par
+Saat ini aplikasi berbasis \textit{microservice} menjadi pilihan sebagai arsitektur utama ketika
+membangun aplikasi yang scalable\cite{Wu2014}. Aplikasi berbasis \textit{microservice} ini
+dulunya dikembangkan dengan dengan menjalankan beberapa VM  (virtual machine)
+yang saling berkomunikasi satu sama lain melalui REST/HTTP  (Hypertext Transfer Protocol)
+ataupun RPC \textit{(Remote Procedure Call)}\cite{Khazaei2016}. Karena  pada saat itu deployment \textit{microservice} itu sendiri
+masih berbasis VM yang  membutuhkan operasi manual dan juga biaya yang mahal, aplikasi berbasis
+\textit{microservice} pun menjadi susah dan kompleks dari sisi biaya dan waktu yang  dibutuhkan untuk dilakukan
+pengembangan dan juga \textit{scaling}\cite{Khazaei2016} .
+\par
+\newpage
+Teknologi VM sendiri sudah perlahan ditinggalkan ketika merancang \textit{microservice}.
+Dengan adanya teknologi \textit{containerization} aplikasi dapat dibungkus agar dapat dijalankan dengan mudah dan efisien \cite{Khazaei2016}.
+Menjalankan aplikasi dengan  abstraksi yang diberikan oleh sebuah \textit{container} juga membawa fleksibilitas
+dalam  pengelolaannya. Salah satu manfaatnya adalah scaling aplikasi yang jauh lebih  mudah, yaitu hanya
+dengan melakukan penyesuaian jumlah \textit{container} yang  dijalankan\cite{Singh2017}.
+\par
+\textit{Containerization}\cite{davidbritch} ini sangat berdampak pada aspek infrastruktur dan \textit{runtime} sebuah aplikasi.
+Tapi dengan adanya \textit{container} diperlukan juga sebuah  sistem yang melakukan orkestrasi secara otomatis pada \textit{container} tersebut.
+Dengan  adanya kubernetes kita dapat memanfaatkan fitur fitur yang diberikan oleh kubernetes antara lain fitur automatic scaling\cite{Leila2018, kubernetes_2021}.
+Saat ini untuk melakukan  deployment sebuah \textit{container} (\textit{service)}) dilakukan secara manual dengan merubah file deployment.
+Dengan demikian, diperlukan cara otomatis untuk melakukan deployment \textit{service} yang baru/diubah.
+\par
+Dengan banyaknya persaingan dalam dunia perangkat lunak yang terjadi dalam waktu ini sebuah perusahaan
+atau developer memerlukan waktu yang cepat untuk melakukan deployment sebuah perangkat lunak. Terdapat beberapa macam
+workflow sebuah deploymen perangkat lunak saat ini, tetapi yang industri saat ini lakukan adalah metode DevOps.
+Metode DevOps sendiri merupakan metode yang digunakan untuk mengembangkan perangkat lunak yang
+menjembatani antara dua team yang terisolasi dalam struktur organisasi, contohnya adalah team pengembang (Dev)
+dan team operasi (Ops)\cite{Bolscher2019}. Konsep DevOps sendiri memungkinkan team devloper dan operasi
+untuk membangun sebuah perangkat lunak yang dapat dijalankan secara otomatis dan secara berkala dengan menggunakan alat bantu DevOps.
+Tujuan utama dari itu adalah untuk meningkatkan kecepatan, reliabilitas, dan perangkat lunak yang lebih baik.
+Dalam DevOps sendiri terdapat beberapa sub-metode yang digunakan yaitu, \textit{Continuous Integration} (CI), \textit{Continuous DElivery} (CDE),
+dan \textit{Continuous Deployment} (CD) \cite{phoenix2013}.
+\par
+Walaupun DevOps sendiri memiliki beberapa keunggulan, tetapi implementasi CI,CDE, dan CD bukanlah hal yang mudah.
+Pemilihan tools dan adaptasinya, adaptasi karyawan, dan miskonfigurasi yang biasa terjadi pada saat migrasi menggunakan metode DevOps.
+\newpage
+Terdapat beberapa masalah yang sering terjadi pada saat menggunakan metode DevOps yaitu; Arsitektur\cite{Bolscher2019},
+tools\cite{Proulx2018}, metode baru \cite{Abbass2019, Leite2019}, Keamanan dari flow CI/CD\cite{Shahin2017}, dan mekanisme rollback\cite{Fritzsch2019}.
+Pada penelitian yang dilakukan oleh Ramadoni dkk.\cite{Ramadoni2021} dilakukan analisis menggunakan metode GitOps
+yang dapat menyelesaikan permasalahan mekanisme rollback, dan keamanan flow CI/CD
+\par
+Pada penelitian yang dilakukan oleh Ramadoni dkk.\cite{Ramadoni2021} digunakan metode pull-based untuk menyelesaikan permasalahan diatas. Pada penelitian tersebut tidak
+dijelaskan perbedaan kenapa harus menggunakan metode pull-based atau push-based dan juga tidak dijelaskan
+perbandingan tools yang digunakan sebagai operator GitOps yaitu ArgoCD pada sebuah cluster Kubernetes.
+Maka tujuan dari penelitian ini adalah untuk melakukan analisis perbedaan tools yang digunakan
+sebagai operator GitOps dan melakukan perbandingan metode pull-based dan push-based pada metode DevOps.
 
-\section{Rumusan Masalah}
+% \section{Identifikasi Masalah}
+% Berdasarkan latar belakang di atas dapat diidentifikasi masalah-masalah sebagai berikut:
+% \begin{enumerate}[nolistsep,leftmargin=0.5cm]
+%     \item Masalah 1.
+%     \item Masalah 2.
+%     \item Masalah 3.
+% \end{enumerate}
 
-\section{Tujuan Penelitian}
+% \section{Rumusan Masalah}
 
-\section{Manfaat Penelitian}
-\begin{enumerate}[nolistsep,leftmargin=0.5cm]
-\item Manfaat bagi pribadi.
-\item Manfaat bagi institusi.
-\item Manfaat bagi masyarakan umum.
-\end{enumerate}
+% \section{Tujuan Penelitian}
 
-\section{Batasan Masalah}
-Dalam penelitian ini, peneliti akan membatasi masalah yang akan diteliti antara lain:
-\begin{enumerate}[nolistsep,leftmargin=0.5cm]
-\item Batasan 1.
-\item Batasan 2.
-\item Batasan 3.
-\end{enumerate}
+% \section{Manfaat Penelitian}
+% \begin{enumerate}[nolistsep,leftmargin=0.5cm]
+%     \item Manfaat bagi pribadi.
+%     \item Manfaat bagi institusi.
+%     \item Manfaat bagi masyarakan umum.
+% \end{enumerate}
+
+% \section{Batasan Masalah}
+% Dalam penelitian ini, peneliti akan membatasi masalah yang akan diteliti antara lain:
+% \begin{enumerate}[nolistsep,leftmargin=0.5cm]
+%     \item Batasan 1.
+%     \item Batasan 2.
+%     \item Batasan 3.
+% \end{enumerate}
 
 
-\section{Metode Penelitian}
+% \section{Metode Penelitian}
 
-\subsection{Pengumpulan Data}
-Pengumpulan data dilakukan untuk memperoleh informasi yang
-dibutuhkan dan merupakan salah satu hal yang mempengaruhi kualitas data hasil penelitian. Data penelitian sendiri diperoleh:
-\begin{enumerate}[nolistsep,leftmargin=0.5cm]
-\item Observasi \\
-BlablablablblablalbalalBlablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal
-\item Wawancara \\
-Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal vBlablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal
-\item Studi Literatur \\
-Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal
-\end{enumerate}
+% \subsection{Pengumpulan Data}
+% Pengumpulan data dilakukan untuk memperoleh informasi yang
+% dibutuhkan dan merupakan salah satu hal yang mempengaruhi kualitas data hasil penelitian. Data penelitian sendiri diperoleh:
+% \begin{enumerate}[nolistsep,leftmargin=0.5cm]
+%     \item Observasi \\
+%           BlablablablblablalbalalBlablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal
+%     \item Wawancara \\
+%           Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal vBlablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal
+%     \item Studi Literatur \\
+%           Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal Blablablablblablalbalal
+% \end{enumerate}
 
-\subsection{Pengembangan Sistem}
+% \subsection{Pengembangan Sistem}
 
-\subsection{Sistematika Penulisan}
-Pada penelitian ini peneliti menyusun berdasarkan sistematika penulisan sebagai berikut: \\
-\noindent \textbf{BAB I \hspace{1cm} PENDAHULUAN}
-\begin{addmargin}[2.35cm]{0em}
-Bab ini berisi tentang latar belakang, identifikasi masalah, tujuan penelitian, manfaat penelitian, batasan masalah, metode penelitian, dan sistematika penulisan.
-\end{addmargin}
-\noindent \textbf{BAB II \hspace{0.8cm} LANDASAN TEORI}
-\begin{addmargin}[2.35cm]{0em}
-Bab ini berisi tentang teori-teori yang mendukung atau berhubungan denga aplikasi ini.
-\end{addmargin}
-\noindent \textbf{BAB III \hspace{0.7cm} ANALISA DAN PERANCANGAN SISTEM}
-\begin{addmargin}[2.35cm]{0em}
-Bab ini menjelaskan tentang proses menganalisa dan merancang sistem aplikasi ini.
-\end{addmargin}
-\noindent \textbf{BAB IV \hspace{0.7cm} IMPLEMENTASI DAN PENGUJIAN}
-\begin{addmargin}[2.35cm]{0em}
-Bab ini berisi tentang implementasi dan pengujian sistem aplikasi yang telah dibuat.
-\end{addmargin}
-\noindent \textbf{BAB V \hspace{0.8cm} KESIMPULAN DAN SARAN}
-\begin{addmargin}[2.35cm]{0em}
-Bab ini berisi tentang kesimpulan dan saran untuk mendukung perbaikan sistem aplikasi ini.
-\end{addmargin}
+% \subsection{Sistematika Penulisan}
+% Pada penelitian ini peneliti menyusun berdasarkan sistematika penulisan sebagai berikut: \\
+% \noindent \textbf{BAB I \hspace{1cm} PENDAHULUAN}
+% \begin{addmargin}[2.35cm]{0em}
+%     Bab ini berisi tentang latar belakang, identifikasi masalah, tujuan penelitian, manfaat penelitian, batasan masalah, metode penelitian, dan sistematika penulisan.
+% \end{addmargin}
+% \noindent \textbf{BAB II \hspace{0.8cm} LANDASAN TEORI}
+% \begin{addmargin}[2.35cm]{0em}
+%     Bab ini berisi tentang teori-teori yang mendukung atau berhubungan denga aplikasi ini.
+% \end{addmargin}
+% \noindent \textbf{BAB III \hspace{0.7cm} ANALISA DAN PERANCANGAN SISTEM}
+% \begin{addmargin}[2.35cm]{0em}
+%     Bab ini menjelaskan tentang proses menganalisa dan merancang sistem aplikasi ini.
+% \end{addmargin}
+% \noindent \textbf{BAB IV \hspace{0.7cm} IMPLEMENTASI DAN PENGUJIAN}
+% \begin{addmargin}[2.35cm]{0em}
+%     Bab ini berisi tentang implementasi dan pengujian sistem aplikasi yang telah dibuat.
+% \end{addmargin}
+% \noindent \textbf{BAB V \hspace{0.8cm} KESIMPULAN DAN SARAN}
+% \begin{addmargin}[2.35cm]{0em}
+%     Bab ini berisi tentang kesimpulan dan saran untuk mendukung perbaikan sistem aplikasi ini.
+% \end{addmargin}
 
 \newpage
