--- a/bab1.tex
+++ b/bab1.tex
@@ -71,10 +71,10 @@ Dengan demikian, diperlukan cara otomatis untuk melakukan deployment \textit{ser
 \par
 Dengan banyaknya persaingan dalam dunia perangkat lunak yang terjadi dalam waktu ini sebuah perusahaan
 atau developer memerlukan waktu yang cepat untuk melakukan deployment sebuah perangkat lunak. Terdapat beberapa macam
-workflow sebuah deploymen perangkat lunak saat ini, tetapi yang industri saat ini lakukan adalah metode DevOps.
+workflow sebuah deploymen perangkat lunak saat ini, tetapi yang industri saat ini lakukan adalah metode DevOps \cite{Bass2018}.
 Metode DevOps sendiri merupakan metode yang digunakan untuk mengembangkan perangkat lunak yang
 menjembatani antara dua team yang terisolasi dalam struktur organisasi, contohnya adalah team pengembang (Dev)
-dan team operasi (Ops) \cite{Bolscher2019}. Konsep DevOps sendiri memungkinkan team devloper dan operasi
+dan team operasi (Ops) \cite{Bolscher2019}. Konsep DevOps \cite{Bass2018} sendiri memungkinkan team devloper dan operasi
 untuk membangun sebuah perangkat lunak yang dapat dijalankan secara otomatis dan secara berkala dengan menggunakan alat bantu DevOps.
 Tujuan utama dari itu adalah untuk meningkatkan kecepatan, reliabilitas, dan perangkat lunak yang lebih baik.
 Dalam DevOps sendiri terdapat beberapa sub-metode yang digunakan yaitu, \textit{Continuous Integration} (CI), \textit{Continuous DElivery} (CDE),
