--- a/export.bib
+++ b/export.bib
@@ -354,8 +354,63 @@ abstract = {Bill is an IT manager at Parts Unlimited. It's Tuesday morning and o
    year = {2019},
 }
 
+@book{Forsgen2018,
+author = {Forsgren, Nicole and Humble, Jez and Kim, Gene},
+title = {Accelerate: The Science of Lean Software and DevOps Building and Scaling High Performing Technology Organizations},
+year = {2018},
+isbn = {1942788339},
+publisher = {IT Revolution Press},
+edition = {1st},
+abstract = {Accelerate your organization to win in the marketplace. How can we apply technology to drive business value? For years, we've been told that the performance of software delivery teams doesn't matterthat it can't provide a competitive advantage to our companies. Through four years of groundbreaking research to include data collected from the State of DevOps reports conducted with Puppet, Dr. Nicole Forsgren, Jez Humble, and Gene Kim set out to find a way to measure software delivery performanceand what drives itusing rigorous statistical methods. This book presents both the findings and the science behind that research, making the information accessible for readers to apply in their own organizations. Readers will discover how to measure the performance of their teams, and what capabilities they should invest in to drive higher performance. This book is ideal for management at every level.}
+}
+
+@article{Bass2018,
+   author = {Len Bass},
+   doi = {10.1109/MS.2017.4541051},
+   issn = {0740-7459},
+   issue = {1},
+   journal = {IEEE Software},
+   month = {1},
+   pages = {8-10},
+   title = {The Software Architect and DevOps},
+   volume = {35},
+   url = {https://ieeexplore.ieee.org/document/8239924/},
+   year = {2018},
+}
+
+@inproceedings{Chen2015,
+   abstract = {Continuous Delivery (CD) has emerged as an auspicious software development discipline, with the promise of providing organizations the capability to release valuable software continuously to customers. Our organization has been implementing CD for the last two years. Thus far, we have moved 22 software applications to CD. I observed that CD has created a new context for architecting these applications. In this paper, I will try to characterize such a context of CD, explain why we need to architect for CD, describe the implications of architecting for CD, and discuss the challenges this new context creates. This information can provide insights to other practitioners for architecting their software applications, and provide researchers with input for developing their research agendas to further study this increasingly important topic.},
+   author = {Lianping Chen},
+   doi = {10.1109/WICSA.2015.23},
+   isbn = {9781479919222},
+   journal = {Proceedings - 12th Working IEEE/IFIP Conference on Software Architecture, WICSA 2015},
+   keywords = {DevOps,architecturally significant requirements,continuous delivery,continuous deployment,continuous software engineering,non-functional requirements,quality attributes,software architecture},
+   month = {7},
+   pages = {131-134},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Towards Architecting for Continuous Delivery},
+   year = {2015},
+}
+
+@article{Chen2015b,
+   abstract = {Continuous delivery (CD) has emerged as an auspicious alternative to traditional release engineering, promising to provide the capability to release valuable software continuously to customers. Paddy Power has been implementing CD for the past two years. This article explains why Paddy Power decided to adopt CD, describes the resulting CD capability, and reports the huge benefits and challenges involved. These experiences can provide fellow practitioners with insights for their adoption of CD, and the identified challenges can provide researchers valuable input for developing their research agendas.},
+   author = {Lianping Chen},
+   doi = {10.1109/MS.2015.27},
+   issn = {07407459},
+   issue = {2},
+   journal = {IEEE Software},
+   keywords = {DevOps,continuous delivery,continuous software engineering,release engineering,software deployment,software engineering},
+   month = {3},
+   pages = {50-54},
+   publisher = {IEEE Computer Society},
+   title = {Continuous delivery: Huge benefits, but challenges too},
+   volume = {32},
+   year = {2015},
+}
+
 @misc{davidbritch, title={Containerized microservices - xamarin}, url={https://docs.microsoft.com/en-us/xamarin/xamarin-forms/enterprise-application-patterns/containerized-microservices#:~:text=with%20client%20apps.-,Containerization,to%20a%20host%20operating%20system.}, journal={Xamarin | Microsoft Docs}, author={Davidbritch}}
 @misc{kubernetes_2021, title={What is kubernetes?}, url={https://kubernetes.io/docs/concepts/overview/what-is-kubernetes/}, journal={Kubernetes}, year={2021}, month={Jul}}  
 @misc{go_mod, title={The go blog on go modules}, url={https://go.dev/blog/using-go-modules}, journal={Go}, year={2021}, month={Jul}}
 @misc{requirementPython, title={How to install python packages with PIP and requirements.txt}, url={https://note.nkmk.me/en/python-pip-install-requirements/}, journal={How to install Python packages with pip and requirements.txt}}
-@misc{rubySpec, title={Ruby/Spec: The ruby spec suite AKA ruby/spec}, url={https://github.com/ruby/spec}, journal={GitHub}, author={Software, Open Source}} 
+@misc{rubySpec, title={Ruby/Spec: The ruby spec suite AKA ruby/spec}, url={https://github.com/ruby/spec}, journal={GitHub}, author={Software, Open Source}}
+@misc{GitOps, title={Gitops}, url={https://www.gitops.tech/}, journal={GitOps}, publisher={Wavework}, author={Flaurian Beetz and Anja Kammer and Simon Harrer}}  
