--- a/sampul.tex
+++ b/sampul.tex
@@ -1,31 +1,35 @@
 \begin{titlepage}
-\begin{center}
-	\onehalfspacing
-	\large \bfseries \textit{AutomaticDeployment}  Aplikasi berbasis \textit{Microservice} Pada Platform Kubernetes Dengan Metode \textit{Pull Up Based} \\
-	\vspace{1cm}
-	 \large Proposal Tugas Akhir \\
-	\vspace{0.5cm}
-	
-	{\small \normalfont Diajukan Untuk Memenuhi\\
-	Persyaratan Guna Meraih Gelar Sarjana\\
-	Informatika Universitas Muhammadiyah Malang}
-	\vspace{2cm}
-	
-	\includegraphics[width=6cm]{images/logo_umm.png}
-	
-	\vspace{1cm}
-	Muhammad Zein Ihza Fahrozi \\
-	201810370311072 \\
-	
-	\vspace{3cm}
-	
-	\normalsize PROGRAM STUDI TEKNIK INFORMATIKA FAKULTAS TEKNIK \\
-	UNIVERSITAS MUHAMMADIYAH MALANG \\
-	2021
-	
+	\begin{center}
+		\onehalfspacing
+		\large \bfseries \textit{Automatic Deployment}  Aplikasi berbasis \textit{Microservice} Pada Platform Kubernetes Dengan Metode \textit{Pull-Up} \\
+		\vspace{1cm}
+		\large Proposal Tugas Akhir \\
+		\vspace{0.5cm}
 
-	
-\end{center}
+		{\small \normalfont Diajukan Untuk Memenuhi\\
+			Persyaratan Guna Meraih Gelar Sarjana\\
+			Informatika Universitas Muhammadiyah Malang}
+		\vspace{2cm}
+
+		\includegraphics[width=6cm]{images/logo_umm.png}
+
+		\vspace{1cm}
+		\normalfont \normalsize Muhammad Zein Ihza Fahrozi \\
+		\normalfont \normalsize 201810370311072 \\
+
+		\vspace{1cm}
+		\bfseries \normalsize Bidang Minat \\
+		\normalfont \normalsize (Rekayasa Perangkat Lunak)
+
+		\vspace{2.5cm}
+
+		\normalsize PROGRAM STUDI TEKNIK INFORMATIKA FAKULTAS TEKNIK \\
+		UNIVERSITAS MUHAMMADIYAH MALANG \\
+		2021
+
+
+
+	\end{center}
 
 \end{titlepage}
 
