--- a/src/persetujuan.tex
+++ b/src/persetujuan.tex
@@ -22,8 +22,8 @@
 
 
 
-\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
-\newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
+\newcolumntype{P}[0]{>{\centering\arraybackslash}p{7cm}}
+\newcolumntype{M}[0]{>{\centering\arraybackslash}m{7cm}}
 
 \begin{center}
 	\normalfont\normalsize Malang, \today \\
@@ -34,7 +34,7 @@
 % \setlength{\tabcolsep}{10pt}
 \begin{table}[!ht]
 	\centering
-	\begin{tabular}{M{7cm}M{7cm}}
+	\begin{tabular}{MM}
 
 		Dosen I                                                                                             & Dosen II                                                                                        \\
 		\rule{0pt}{4cm} \bfseries{\underline{Agus Eko Minarno, S.Kom., M.Kom.}} \newline NIP. 108.1410.0540 & \rule{0pt}{4cm} \bfseries{\underline{Ilyas Nuryasin S.Kom, M.Kom.}} \newline NIP. 108.1410.0561 \\
